--- a/index.html
+++ b/index.html
@@ -1,145 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Orçamento com Senha</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!--CDN para linkar a blibliotca de icones-->
+  <link rel="stylesheet" href="https://cdnjs.cloudfhlare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    /*Estilização do body*/
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      /*Define a fonte do body*/
+      font-family: sans-serif;
+      /*Define a cor de fundo do body*/
+      background-color: white;
       padding: 2rem;
     }
-
+    /*Estilização do h1*/
     h1 {
+      /*Deixa o texto do h1 , centralizado*/
       text-align: center;
       margin-bottom: 2rem;
     }
-  
+    /*Estilização do form-container*/
     .form-container {
-      /*display: flex;
+      display: flex;
       align-items: center;
-      justify-content: space-around;*/
-      max-width: 700px;
+      justify-content: center;
+      /*Largura maxima até 500px*/
+      max-width: 500px;
+      /*Define a margem de forma automatica*/
       margin: auto;
-      background-color: white;
-      padding: 2rem ;
-      border-radius:5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      /*Define a cor de fundo do form-container*/
+      background-color: black;
+      /*Define a cor do texto , dentro do form-container*/
+      color: #f3f3f3;
+      padding: 2rem;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
     }
-
-    textarea {
+    /*Estilização do botão*/
+    .botao {
+      /*Largura de 100%*/
       width: 100%;
-      height: 160px;
-      padding: 1rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      resize: none;
-    }
-
-    button {
-      margin-top: 1rem;
-      padding: 0.7rem 1.4rem;
-      font-weight: bold;
-      border-radius: 6px;
-      border: none;
+      /*Altura de 25px*/
+      height: 25px;
+    /*Define a margem de forma automatica*/
+      margin: auto;
+      /*Define o padding de forma automatica*/
+      padding: auto;
+      /*Define a cor de fundo do botão*/
+      background-color: #d61818;
+      /*Define a cor do texto , dentro do botão*/
+      color: #f3f3f3;
+      /*Define o cursor , quando o mouse passa por cima do botão*/
       cursor: pointer;
+      /*Define borda de forma automatica*/
+      border: none;
     }
-
-    button:first-of-type {
-      background-color: #007bff;
-      color: white;
-    }
-
-    button:first-of-type:hover {
-      background-color: #005dc1;
-    }
-
-    button:last-of-type {
-      background-color: #ddd;
-      margin-left: 1rem;
-    }
-
-    button:last-of-type:hover {
-      background-color: #bbb;
+    .botao:hover {
+      background-color: #f3f3f3;
+      color: #111111;
     }
   </style>
 </head>
 <body>
-
-  <h1>Orçamento Protegido por Senha</h1>
-
+  <!--Titulo-->
+  <h1><i class="fas fa-lock"></i></h1>
+  <!--Estrutura HTML conateiner-->
   <div class="form-container">
-    <form id="orcamentoForm">
-      <label for="orcamento">Descrição do Orçamento:</label><br>
-      <textarea id="orcamento" placeholder="Digite seu orçamento..."></textarea><br>
-      <button type="submit">Enviar</button>
-      <button type="button" onclick="limpar()">Limpar e Reescrever</button>
+    <!--Estrutura HTML do formulario-->
+    <form>
+      <label for="formulario">Digite seu loguin e senha </label><br><br>
+      <i class="fas fa-user"></i>
+      Login :&nbsp;&nbsp;<input type="text" placeholder="Digite seu E-mail"><br><br>
+      <i class="fas fa-lock"></i>
+      Senha : <input type="text" placeholder="Digite sua senha"><br><br>
+      <!--Botão de envio de dados -->
+      <button class="botao" type="submit">Enviar</button>
     </form>
   </div>
-
-  <script>
-    const form = document.getElementById("orcamentoForm");
-    const textarea = document.getElementById("orcamento");
-
-    // Carregamento inicial 
-
-
-    window.addEventListener("load", () => {
-      const textoSalvo = localStorage.getItem("orcamentoTexto");
-      if (textoSalvo) {
-        textarea.value = textoSalvo;
-        textarea.disabled = true;
-      }
-    });
-
-    // Enviar orçamento com definição de senha
-    form.addEventListener("submit", function (event) {
-      event.preventDefault();
-
-      const texto = textarea.value.trim();
-      if (!texto) {
-        alert("Digite seu orçamento antes de enviar.");
-        return;
-      }
-
-      let senha = localStorage.getItem("orcamentoSenha");
-      if (!senha) {
-        const novaSenha = prompt("Defina uma senha para proteger o orçamento:");
-        if (!novaSenha || novaSenha.length < 4) {
-          alert("Senha inválida. Use pelo menos 4 caracteres.");
-          return;
-        }
-        localStorage.setItem("orcamentoSenha", novaSenha);
-        senha = novaSenha;
-      }
-
-      localStorage.setItem("orcamentoTexto", texto);
-      textarea.disabled = true;
-      alert("Orçamento salvo com sucesso!");
-    });
-
-    // Limpar orçamento com validação de senha
-    function limpar() {
-      const senhaSalva = localStorage.getItem("orcamentoSenha");
-      if (!senhaSalva) {
-        alert("Nenhuma senha registrada. Não é possível apagar.");
-        return;
-      }
-
-      const tentativa = prompt("Digite a senha para limpar o orçamento:");
-      if (tentativa === senhaSalva) {
-        localStorage.removeItem("orcamentoTexto");
-        localStorage.removeItem("orcamentoSenha");
-        textarea.value = "";
-        textarea.disabled = false;
-        textarea.focus();
-        alert("Orçamento apagado com sucesso!");
-      } else {
-        alert("Senha incorreta. Orçamento não foi apagado.");
-      }
-    }
-  </script>
-
-</body>
+  </body>
 </html>
