--- a/index.html
+++ b/index.html
@@ -4,80 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!--CDN para linkar a blibliotca de icones-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    /*Estilização do body*/
-    body {
-      /*Define a fonte do body*/
-      font-family: sans-serif;
-      /*Define a cor de fundo do body*/
-      background-color: white;
-      padding: 2rem;
-    }
-    /*Estilização do h1*/
-    h1 {
-      /*Deixa o texto do h1 , centralizado*/
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    /*Estilização do form-container*/
-    .form-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      /*Largura maxima até 500px*/
-      max-width: 500px;
-      /*Define a margem de forma automatica*/
-      margin: auto;
-      /*Define a cor de fundo do form-container*/
-      background-color: black;
-      /*Define a cor do texto , dentro do form-container*/
-      color: #f3f3f3;
-      padding: 2rem;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
-    }
-    /*Estilização do botão*/
-    .botao {
-      /*Largura de 100%*/
-      width: 100%;
-      /*Altura de 25px*/
-      height: 25px;
-    /*Define a margem de forma automatica*/
-      margin: auto;
-      /*Define o padding de forma automatica*/
-      padding: auto;
-      /*Define a cor de fundo do botão*/
-      background-color: #d61818;
-      /*Define a cor do texto , dentro do botão*/
-      color: #f3f3f3;
-      /*Define o cursor , quando o mouse passa por cima do botão*/
-      cursor: pointer;
-      /*Define borda de forma automatica*/
-      border: none;
-    }
-    .botao:hover {
-      background-color: #f3f3f3;
-      color: #111111;
-    }
-  </style>
 </head>
+<style>
+ body {
+  background-image: url('./img-Vidro.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed; /* Faz a imagem ficar fixa ao rolar a página */
+font-family: sans-serif;
+background-color: aliceblue;
+color: aliceblue;
+padding: 2rem;
+}
+h1{
+  text-align: center;
+  padding: 2rem;
+  color: black;
+
+}
+.form-container{
+max-width: 300px;
+margin: auto;
+background-color: rgb(0, 0, 0);
+padding: 2rem;
+border-radius: 6px;
+box-shadow: 0 0 12 rgba (0,0,0,0,.1);
+}
+
+button{
+width: 300px;
+height: 20px;
+background-color:  rgba(0, 123, 255, 1);
+color: white;
+border-radius: 5px;
+border: none;
+cursor: pointer;
+}
+button:hover{
+background-color: rgba(0, 123, 255, 0.8);
+color:#000000 ;
+}
+
+</style>
+
 <body>
-  <!--Titulo-->
   <h1><i class="fas fa-lock"></i></h1>
-  <!--Estrutura HTML conateiner-->
-  <div class="form-container">
-    <!--Estrutura HTML do formulario-->
-    <form>
-      <label for="formulario">Digite seu loguin e senha </label><br><br>
-      <i class="fas fa-user"></i>
-      Login :&nbsp;&nbsp;<input type="text" placeholder="Digite seu E-mail"><br><br>
-      <i class="fas fa-lock"></i>
-      Senha : <input type="text" placeholder="Digite sua senha"><br><br>
-      <!--Botão de envio de dados -->
-      <button class="botao" type="submit">Enviar</button>
-    </form>
-  </div>
-  </body>
+<div class="form-container">
+<form>
+<label for="Interface de usuario">Digite seu login e senha</label><br><br>
+<i class="fas fa-user"></i>
+Login : <input type="text" placeholder="E-mail"><br><br>
+<i class="fas fa-lock"></i>
+Senha  :<input type="password" placeholder="Senha"><br><br>
+<button type="submit">Enviar</button>
+</form>
+
+</div>
+  
+</body>
 </html>
