--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ h1{
 
 }
 .form-container{
-max-width: 500px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  justify-content: space-around;
+max-width: 300px;
 margin: auto;
 background-color: rgb(0, 0, 0);
 padding: 2rem;
@@ -34,6 +38,7 @@ box-shadow: 0 0 12 rgba (0,0,0,0,.1);
 }
 
 button{
+  align-items: center;
 width: 280px;
 height: 20px;
 background-color:  rgba(0, 123, 255, 1);
