--- a/index.html
+++ b/index.html
@@ -4,69 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<style>
- body {
-  background-image: url('./img-Vidro.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed; /* Faz a imagem ficar fixa ao rolar a página */
-font-family: sans-serif;
-background-color: aliceblue;
-color: aliceblue;
-padding: 2rem;
-}
-h1{
-  text-align: center;
-  padding: 2rem;
-  color: black;
 
-}
-.form-container{
-  align-items: center;
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <style>
+css
+/* Faz a página ocupar toda a altura e usa flexbox para centralizar */
+body, html {
+  height: 100%;
+  margin: 0;
   display: flex;
-  justify-content: space-between;
-  justify-content: space-around;
-max-width: 300px;
-margin: auto;
-background-color: rgb(0, 0, 0);
-padding: 2rem;
-border-radius: 6px;
-box-shadow: 0 0 12 rgba (0,0,0,0,.1);
+  justify-content: center; /* centraliza horizontalmente */
+  align-items: center;     /* centraliza verticalmente */
+  font-family: Arial, sans-serif;
+  background-image: url('./img-Vidro.jpg');
+  background-size: cover;       /* cobre toda a área */
+  background-position: center;  /* centraliza a imagem */
+  background-repeat: no-repeat; /* não repete */
 }
 
-button{
-  align-items: center;
-width: 280px;
-height: 20px;
-background-color:  rgba(0, 123, 255, 1);
-color: white;
-border-radius: 5px;
-border: none;
-cursor: pointer;
-}
-button:hover{
-background-color: rgba(0, 123, 255, 0.8);
-color:#000000 ;
+/* Container do formulário */
+.form-container {
+  background-color: #f4f4f4f4;
+  padding: 30px 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
-</style>
+/* Estiliza cada input junto com o ícone */
+.form-container input {
+  padding: 10px 40px 10px 12px; /* espaço para o ícone à direita */
+  font-size: 16px;
+  width: 250px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
+/* Posiciona os ícones dentro do input */
+.form-container i {
+  position: relative;
+  left: -35px; /* posiciona o ícone para dentro do input, à direita */
+  color: #888;
+}
+
+/* Espaçamento entre inputs */
+.form-container input + i {
+  margin-bottom: 20px;
+}
+h1 , h2{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  font-size: 24px;
+ 
+}
+  </style>
+</head>
 <body>
-  <h1><i class="fas fa-lock"></i></h1>
-<div class="form-container">
-<form>
-<label for="Interface de usuario">Digite seu login e senha</label><br><br>
-<i class="fas fa-user"></i>
-Login : <input type="text" placeholder="E-mail"><br><br>
-<i class="fas fa-lock"></i>
-Senha  :<input type="password" placeholder="Senha"><br><br>
-<button type="submit">Enviar</button>
-</form>
 
-</div>
+ 
+  <div class="form-container">
+    <h1>Digite</h1>
+     <h2>Usuário e Senha</h2>
+  <input id="textarea" type="text" placeholder="Usuário" />
+  <i class="bi bi-person"></i><br><br>
+  <input type="password"placeholder="Senha" />
+  <i class="bi bi-key"></i>
+  </div>
   
 </body>
 </html>
