--- a/index.html
+++ b/index.html
@@ -1,74 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login Responsivo</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+
   <style>
-css
-/* Faz a página ocupar toda a altura e usa flexbox para centralizar */
-body, html {
-  height: 100%;
+    /* Adiciona box-sizing para um controle de layout mais previsível */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
+    /* Faz a página ocupar toda a altura e usa flexbox para centralizar */
+    body, html {
+  height: 100%; /* Ensures that both elements try to take up the full viewport height */
+  width: 100%;
   margin: 0;
   display: flex;
-  justify-content: center; /* centraliza horizontalmente */
-  align-items: center;     /* centraliza verticalmente */
+  justify-content: center;
+  align-items: center;
   font-family: Arial, sans-serif;
   background-image: url('./img-Vidro.jpg');
-  background-size: cover;       /* cobre toda a área */
-  background-position: center;  /* centraliza a imagem */
-  background-repeat: no-repeat; /* não repete */
+  background-size: cover; /* Scales the image to cover the entire container */
+  background-position: center; /* Centers the image within the container */
+  background-repeat: no-repeat; /* Prevents the image from tiling */
+  min-height: 100vh; /* Ensures that the body always takes up at least 100% of the viewport height */
 }
 
-/* Container do formulário */
-.form-container {
-  background-color: #f4f4f4f4;
-  padding: 30px 40px;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-}
+    /* Container do formulário */
+    .form-container {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 380px;
+    }
 
-/* Estiliza cada input junto com o ícone */
-.form-container input {
-  padding: 10px 40px 10px 12px; /* espaço para o ícone à direita */
-  font-size: 16px;
-  width: 250px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
+    .form-container h1 {
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      text-align: center;
+      font-size: 28px;
+      margin: 0 0 25px 0;
+      color: #333;
+    }
 
-/* Posiciona os ícones dentro do input */
-.form-container i {
-  position: relative;
-  left: -35px; /* posiciona o ícone para dentro do input, à direita */
-  color: #888;
-}
+    .input-group {
+      position: relative;
+      width: 100%;
+      margin-bottom: 20px;
+    }
+    
+    .input-group label {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      border: 0;
+    }
 
-/* Espaçamento entre inputs */
-.form-container input + i {
-  margin-bottom: 20px;
-}
-h1 , h2{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
-  font-size: 24px;
- 
-}
+    .input-group input {
+      padding: 12px 40px 12px 15px;
+      font-size: 16px;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .input-group i {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #888;
+    }
+
+    /* Botão de Envio */
+    .btn-submit {
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+      background-color: #007bff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: background-color 0.3s;
+    }
+
+    .btn-submit:hover {
+      background-color: #0056b3;
+    }
+
+    /* Responsividade */
+    @media (max-width: 480px) {
+      .form-container {
+        padding: 20px;
+        max-width: 90%;
+      }
+
+      .form-container h1 {
+        font-size: 24px;
+      }
+
+      .input-group input {
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 <body>
 
- 
-  <div class="form-container">
-    <h1>Digite</h1>
-     <h2>Usuário e Senha</h2>
-  <input id="textarea" type="text" placeholder="Usuário" />
-  <i class="bi bi-person"></i><br><br>
-  <input type="password"placeholder="Senha" />
-  <i class="bi bi-key"></i>
+<form class="form-container">
+  <h1>Login</h1>
+  <div class="input-group">
+    <label for="username">Usuário</label>
+    <input id="username" type="text" placeholder="Usuário" required />
+    <i class="bi bi-person-fill"></i>
   </div>
-  
+  <div class="input-group">
+    <label for="password">Senha</label>
+    <input id="password" type="password" placeholder="Senha" required />
+    <i class="bi bi-key-fill"></i>
+  </div>
+  <button type="submit" class="btn-submit">Entrar</button>
+</form>
+
 </body>
 </html>
